Added mentor & volunteer applis & fixed issue

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -238,7 +238,7 @@
 <!--cookies-->
 <div id="cookie-notice" style="display:none">
         <p>This website uses cookies of its own and of third parties to improve your browsing experience and show you personalized content based on your interests. If you continue browsing, we consider that you accept its use. You can obtain more information in our <a id="cookies-a" href="{% url 'privacy_and_cookies' %}" target="_blank">Privacy and Cookies Policy</a>.</p>
-        <div id="cookie-notice-button">
+        <div class="btn-primary" id="cookie-notice-button">
             OK!
         </div>
 </div>
