--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -83,12 +83,12 @@
             conditional_field(hardware, face_to_face, function () {
                 return face_to_face.length > 0;
             }, 1);
-            conditional_field(diet, online, function () {
-                return face_to_face.length > 0;
-            }, 1);
-            conditional_field(diet, face_to_face, function () {
-                return face_to_face.length > 0;
-            }, 1);
+            //conditional_field(diet, online, function () {
+            //    return face_to_face.length > 0;
+            //}, 1);
+            //conditional_field(diet, face_to_face, function () {
+            //    return face_to_face.length <= 0;
+            //}, 1);
             conditional_field(other_diet, online, function () {
                 return face_to_face.length > 0;
             }, 1);
