canvis conditional first_time

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -144,8 +144,8 @@
             // Making projects look like required
             projects.parent().addClass('required');
 
-            var is_firsttime_volunteer = $('input[name="first_time_volunteer"][value="True"]');
-            var experienced_volunteer = $('input[name="first_time_volunteer"][value="False"]');
+            var is_firsttime_volunteer = $('input[name="first_time_volunteer"][value="False"]');
+            var experienced_volunteer = $('input[name="first_time_volunteer"][value="True"]');
             var is_firsttime_mentor = $('input[name="first_time_mentor"][value="True"]');
             var experienced_mentor = $('input[name="first_time_mentor"][value="False"]')
             var which_hack = $('#id_which_hack');
