--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends 'base_tabs.html' %}
 
+{% load static %}
 {% load bootstrap3 %}
 {% block head_title %}Dashboard{% endblock %}
 
@@ -120,11 +121,14 @@
 
 
         {% elif application.is_invited or application.is_last_reminder %}
-            <div class="col-md-12">
+            <form method="post" action="" class="col-md-12">
+            {% csrf_token %}
                 <div class="alert alert-success ">Congrats! You have been officially invited to {{ h_name }}{% if h_hybrid %} <strong>{{ application.online|yesno:'Online,Live' }}</strong>{% endif %}! Please
                     confirm
                     your attendance as soon as possible.
                 </div>
+
+
                 {% if application.user.is_hacker %}
                     {% if h_hybrid %}
                         <p>You have been invited to participate <strong>{{ application.online|yesno:'Online,Live' }}</strong>. If you applied to go lively and you are invited online, perhaps our live applications are already full.<br>
@@ -136,6 +140,30 @@
                         <b>This invite expires in
                             {% include 'include/deadline_countdown.html' with timeleft=invite_timeleft %}</b>
                     </p>
+                    <p>Please confirm that this information regarding your application is correct. If you see that something's not right, now is the time to change it!</p>
+                    {% include 'include/bootstrap_form.html' with form=confirm_form %}
+                    <script src="{% static 'js/form_modifiers.js' %}"></script>
+                    <script>
+                        $(document).ready(() => {
+                            let other_diet = $('#id_other_diet');
+                            let diet = $('#id_diet');
+                            conditional_field(other_diet, diet, function () {
+                                return diet.val() === 'Others';
+                            }, 1);
+                            let needs_reimb = $('input[name="reimb"][value="True"]');
+                            let no_reimb = $('input[name="reimb"][value="False"]');
+                            let reimb_amout = $('#id_reimb_amount');
+                            let reimb = $('#id_reimb');
+                            conditional_field(reimb_amout, needs_reimb, function () {
+                                return needs_reimb.prop("checked");
+                            }, 1);
+                            conditional_field(reimb_amout, no_reimb, function () {
+                                return needs_reimb.prop("checked");
+                            }, 1);
+                            reimb.parent().addClass('required');
+                            reimb_amout.parent().addClass('required');
+                        })
+                    </script>
                 {% else %}
                     <p>Respond to this invitation by clicking on the "Confirm" button below. If you cannot make it,
                         please let us know by clicking "Cancel". Thank you so much for helping {{ h_name }}!
@@ -154,12 +182,11 @@
                     <p>{{ h_leave }}</p>
                 {% endif %}
 
-                <div class="col-md-5  no-padding"><a href="{% url 'confirm_app' application.uuid_str %}"
-                                                    class="btn  btn-success btn-block">Confirm{% if h_hybrid %} <strong>{{ application.online|yesno:'Online,Live' }}</strong>{% endif %}</a>
+                <div class="col-md-5  no-padding"><button type="submit" name="action" value="confirm" class="btn  btn-success btn-block">Confirm{% if h_hybrid %} <strong>{{ application.online|yesno:'Online,Live' }}</strong>{% endif %}</button>
                 </div>
                 <div class="col-md-offset-2 col-md-5 no-padding"><a href="{% url 'cancel_app' application.uuid_str %}"
                                                     class="btn  btn-danger btn-block">Cancel</a></div>
-            </div>
+            </form>
         {% elif application.is_invalid and not application.user.is_blacklisted %}
              <div class="col-md-12">
                 {% include 'include/status.html' %}
