--- a/meals/templates/meal_add.html
+++ b/meals/templates/meal_add.html
@@ -32,9 +32,9 @@
 	    <input type="checkbox" name="meal_opened" value="opened"> Active
 	</div>
         <input type="hidden" name="meal_id" value="{{ meal.id }}"/>
-	<button class="btn btn-success" name="update">Add meal</button>
+	<button class="btn btn-success" name="update">Create</button>
     </form>
-    
+
     <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
