Filtered download resumes to only be from confirmed and attended

--- a/organizers/templates/review_resume.html
+++ b/organizers/templates/review_resume.html
@@ -20,8 +20,8 @@
 
 
     {% else %}
-        <h4 class="text-center">No resumes left to be voted.<br> Good job! Enjoy the
-            sun outside!</h4>
+        <h4 class="text-center">No resumes left to be voted.<br> Good job! Enjoy the sun outside!</h4>
+        <p>Remember to wait 6 days after the last batch of invitations as only resumes from applications in status CONFIRMED and ATTENDED will be downloaded.</p>
         <a class="btn btn-block btn-success" href="?files=true">Download resumes</a>
 
     {% endif %}
