--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -9,8 +9,7 @@
     {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     {% include 'mails/include/confirm_reimbursement.html' %}
     <p>
-    If you need an invite letter for your visa, answer this email with your full name, university name and passport number,
-    as shown in your passport.
+    If you need an invite letter for your visa, send us a email to reimbursements@hackupc.com with your full name, university name and passport number, as shown in your passport or if you have any questions, don't hesitate to contact us.
     </p>
     {% include 'mails/include/closing.html' %}
 {% endblock %}
