--- a/hardware/templates/include/hardware_user_email.html
+++ b/hardware/templates/include/hardware_user_email.html
@@ -14,6 +14,7 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", ()=>{
+            if (!document.getElementById('qr-result')) return
             function stop() {
               $('#popup-scan').hide();
               $('#veil').hide();
