--- a/baggage/templates/baggage_add.html
+++ b/baggage/templates/baggage_add.html
@@ -37,6 +37,16 @@
 {% block out_panel %}
   <form id="baggage-form" action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
+  <div>
+        {% for message in messages %}
+            <div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %} alert-dismissible show" role="alert">
+                {{ message|capfirst }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    </div>
     <div class="form-group">
       <label class="control-label" for="bag_type">Type</label>
       <input type="text" id="id_bag_type" class="form-control" name="bag_type" autocomplete="off"/>
@@ -63,15 +73,15 @@
       <input type="checkbox" name="bag_special" id="pos_special" value="special"> Special
     </div>
     <div class="form-group" id="baggage-sel-manual">
-      <input type="checkbox" name="pos_manual" id="pos_manual" value="manual"> Manual position
+      <input {% if defaults.col is not None %}checked{% endif %} type="checkbox" name="pos_manual" id="pos_manual" value="manual"> Manual position
     </div>
-    <div id="baggage-manual" style="display: none;">
+    <div id="baggage-manual" {% if defaults.col is None %}style="display: none;"{% endif %}>
       {% if rooms|length > 0 %}
         <div class="form-group">
           <label class="control-label" for="pos_room">Room</label>
           <select class="form-control" id="baggage-rooms" name="pos_room">
             {% for room in rooms %}
-              <option value="{{ room.room }}">{{ room.room }}</option>
+              <option value="{{ room.room }}" {% if room.room == defaults.room %}selected{% endif %}>{{ room.room }}</option>
             {% endfor %}
           </select>
         </div>
@@ -79,7 +89,7 @@
           <label class="control-label" for="pos_row">Row</label>
           <select class="form-control" id="baggage-rows" name="pos_row">
             {% for i in "x"|ljust:rooms.0.row %}
-              <option value="{{ forloop.counter0|itoa }}" {% if forloop.counter0 == 0 %}
+              <option value="{{ forloop.counter0|itoa }}" {% if forloop.counter0|itoa == defaults.row %}
                       selected {% endif %}>{{ forloop.counter0|itoa }}</option>
             {% endfor %}
           </select>
@@ -88,7 +98,7 @@
           <label class="control-label" for="pos_col">Column</label>
           <select class="form-control" id="baggage-cols" name="pos_col">
             {% for i in "x"|ljust:rooms.0.col %}
-              <option value="{{ forloop.counter0 }}" {% if forloop.counter0 == 0 %}
+              <option value="{{ forloop.counter0 }}" {% if forloop.counter0|stringformat:"i" == defaults.col %}
                       selected {% endif %}>{{ forloop.counter0 }}</option>
             {% endfor %}
           </select>
@@ -99,7 +109,7 @@
     <button class="btn btn-success" name="checkin" id="trigger">Bag check-in</button>
   </form>
 
-{#  <script>#}
+  <script>
     {#        document.addEventListener("DOMContentLoaded", ()=>{#}
     {#           let scanner = new Scanner('preview', 'camera-select', null, true)#}
     {#            scanner.addPhotoToForm('baggage-form', 'baggage-scan-file')#}
@@ -123,32 +133,32 @@
     {#	        }#}
     {#	    {% endfor %}#}
     {#	});#}
-    {##}
-    {#	var special = document.getElementById("pos_special");#}
-    {#	special.addEventListener("change", function(){#}
-    {#	    if(special.checked == true){#}
-    {#		document.getElementById("baggage-manual").style.display = "none"#}
-    {#		document.getElementById("baggage-sel-manual").style.display = "none"#}
-    {#		document.getElementById("baggage-sel-special").style.marginBottom = "15px"#}
-    {#	    }#}
-    {#	    else{#}
-    {#		document.getElementById("pos_manual").checked = false#}
-    {#		document.getElementById("baggage-manual").style.display = "none"#}
-    {#		document.getElementById("baggage-sel-manual").style.display = "block"#}
-    {#		document.getElementById("baggage-sel-special").style.marginBottom = "5px"#}
-    {#	    }#}
-    {#	});#}
-    {##}
-    {#	var manual = document.getElementById("pos_manual");#}
-    {#	manual.addEventListener("change", function(){#}
-    {#	    if(manual.checked == true){#}
-    {#		document.getElementById("baggage-manual").style.display = "block"#}
-    {#	    }#}
-    {#	    else{#}
-    {#		document.getElementById("baggage-manual").style.display = "none"#}
-    {#	    }#}
-    {#	});#}
-    {#    </script>#}
+
+    	var special = document.getElementById("pos_special");
+    	special.addEventListener("change", function(){
+    	    if(special.checked == true){
+    		document.getElementById("baggage-manual").style.display = "none"
+    		document.getElementById("baggage-sel-manual").style.display = "none"
+    		document.getElementById("baggage-sel-special").style.marginBottom = "15px"
+    	    }
+    	    else{
+    		document.getElementById("pos_manual").checked = false
+    		document.getElementById("baggage-manual").style.display = "none"
+    		document.getElementById("baggage-sel-manual").style.display = "block"
+    		document.getElementById("baggage-sel-special").style.marginBottom = "5px"
+    	    }
+    	});
+
+    	var manual = document.getElementById("pos_manual");
+    	manual.addEventListener("change", function(){
+    	    if(manual.checked == true){
+    		document.getElementById("baggage-manual").style.display = "block"
+    	    }
+    	    else{
+    		document.getElementById("baggage-manual").style.display = "none"
+    	    }
+    	});
+        </script>
 
 
     <script nonce="{{ request.csp_nonce }}">
