--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -26,7 +26,7 @@
     <div class="row full-screen">
 
       <div class="container" style="margin-top:60px;">
-        <div style="background-color: white" id="success" class="alert">
+        <div style="background-color: white" class="alert">
           <h1 style="font-size: larger">{{ meal_name }}</h1>
         </div>
 
