--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -30,15 +30,11 @@
           <h1 style="font-size: larger">{{ meal_name }}</h1>
         </div>
 
-        <div id="success" class="alert alert-success alert-dismissible fade in"
-             style="display:none;">
-          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <div id="success" class="alert alert-success" style="display:none;">
           <strong>Success!</strong> <span id="succ"></span>
           <button class="btn btn-block btn-primary scan-again">Scan again</button>
         </div>
-        <div id="no" class="alert alert-danger alert-dismissible fade in"
-             style="display:none;">
-          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        <div id="no" class="alert alert-danger" style="display:none;">
           <strong>ERROR!</strong> <span id="deny"></span>
           <button class="btn btn-block btn-primary scan-again">Scan again</button>
         </div>
