--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -81,6 +81,9 @@
               <div class="col-md-4">
                   <img class="img-responsive "
                        src="http://chart.googleapis.com/chart?cht=qr&chs=350x350&chld=L|0&chl={{ application.uuid_str }}"/>
+                       <a href="{{ gwalleturl }}">
+                           <img src='{% static '/img/button.svg' %}'>
+                       </a>
               </div>
             {% else %}
               <div class="col-md-4">
