Added 2024 colors and background

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -18,7 +18,7 @@
 
 body {
 
-    background: url("../img/background.svg") #f2ede6 center / 640px repeat;
+    background: url("../img/background.jpeg") #f2ede6 center center repeat fixed;
     font-family: ProximaNovaRegular, 'Roboto', sans-serif;
     font-size: 15px;
 }
@@ -71,7 +71,7 @@ a:hover, a:active, a:focus {
     /*-moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);*/
     /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);*/
     border: 0;
-    border-top: 5px solid #e8e2d7;
+    border-top: 5px solid #E3C3FF;
 }
 
 .btn-primary {
@@ -110,7 +110,7 @@ nav.navbar {
     /*-moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
     /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
     border: 0;
-    border-bottom: 5px solid #e8e2d7;
+    border-bottom: 5px solid #E3C3FF;
 }
 
 .table {
@@ -121,7 +121,7 @@ div.panel {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    border: 5px solid #e8e2d7;
+    border: 5px solid #E3C3FF;
     z-index: 3;
 }
 
@@ -260,7 +260,7 @@ img {
     padding: 0.5em 1em;
     text-align: center;
     transition: bottom 1s;
-    background-color: #e8e2d7;
+    background-color: #E3C3FF;
     z-index:1031; /*footer was set to 1030*/
     box-shadow: 0px 15px 15px 15px black;
     color: black;
