--- a/app/static/css/tabs.css
+++ b/app/static/css/tabs.css
@@ -2,7 +2,7 @@
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
-    background: #e8e2d7;
+    background: #E3C3FF;
     /*box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.1);*/
     margin: 0;
     font-style: normal;
