Canvis applications hackers

--- a/organizers/templates/pdf_view.html
+++ b/organizers/templates/pdf_view.html
@@ -6,6 +6,7 @@
 {% block body_plain %}
     <div id="content-pdf" style="width: 100%; text-align: center">
       <button class="btn btn-default btn-block" style="width: 90%; display: inline" onclick="download()">Download</button>
+      <button class="btn btn-default btn-block" style="width: 90%; display: inline" onclick="close_tab();">Close tab</button>
       <div id="pdf-div" style="width: 100%; text-align:center; margin-top: 5px">
 
       </div>
